# asteroid-fitness

./: CMakeLists.txt  test.sh
src/: CMakeLists.txt  appcore.cpp  appcore.h  hellocpp.cpp  hellocpp.h  main.cpp  main.qml  stepstracker.cpp  stepstracker.h
